--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-loader": "^2.1.0",
     "file-loader": "^2.0.0",
     "flow-bin": "^0.80.0",
+    "flow-watch": "^1.1.3",
     "ignore-loader": "^0.1.2",
     "json-loader": "^0.5.7",
     "postcss-loader": "^3.0.0",
