--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
   "author": "Ben Junya <bjunya@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "start": "echo 'not implemented yet'",
+    "dev": "webpack-dev-server"
+  },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-loader": "^8.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-plugin-react-transform": "^3.0.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.5.0",
     "eslint-loader": "^2.1.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-css-modules": "^2.8.1",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-jest": "^21.22.0",
+    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "flow-bin": "^0.80.0",
     "flow-watch": "^1.1.3",
@@ -23,9 +32,18 @@
     "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7",
     "yaml-loader": "^0.5.0"
   },
   "dependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/helper-module-imports": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.2",
     "dotenv-webpack": "^1.5.7",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
