--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "main": "index.js",
   "dependencies": {
     "@babel/core": "^7.1.2",
+    "emotion": "^10.0.0",
     "gatsby": "^2.0.22",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-emotion": "^10.0.0",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1"
   },
@@ -30,10 +32,20 @@
     "start": "echo 'not implemented yet'",
     "test": "alex README.md book/*.md",
     "dev": "gatsby develop",
-    "build": "gatsby build"
+    "build": "gatsby build",
+    "lint": "eslint \"src/**/*.js\""
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-flow": "^7.0.0",
     "alex": "^6.0.0",
+    "babel-preset-gatsby": "^0.1.5",
+    "eslint": "^5.9.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-css-modules": "^2.10.0",
+    "eslint-plugin-jest": "^22.1.0",
     "prettier": "^1.14.3"
   }
 }
