--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test": "alex README.md book/*.md",
     "dev": "gatsby develop",
     "build": "gatsby build",
+    "flow": "flow",
     "lint": "eslint \"src/**/*.js\""
   },
   "devDependencies": {
@@ -46,6 +47,8 @@
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-css-modules": "^2.10.0",
     "eslint-plugin-jest": "^22.1.0",
+    "flow-bin": "^0.87.0",
+    "flow-typed": "^2.5.1",
     "prettier": "^1.14.3"
   }
 }
