--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-source-filesystem": "^2.0.10",
+    "gatsby-transformer-remark": "^2.1.15",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-emotion": "^10.0.0",
