--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-jest": "^22.1.0",
     "flow-bin": "^0.87.0",
     "flow-typed": "^2.5.1",
+    "jest": "^23.6.0",
     "prettier": "^1.14.3"
   }
 }
