--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "dependencies": {
     "@babel/core": "^7.1.2",
+    "classnames": "^2.2.6",
     "emotion": "^10.0.0",
+    "font-awesome": "^4.7.0",
     "gatsby": "^2.0.33",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.6",
