--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "emotion": "^10.0.0",
     "font-awesome": "^4.7.0",
     "gatsby": "^2.0.73",
+    "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-manifest": "^2.0.12",
     "gatsby-plugin-offline": "^2.0.20",
     "gatsby-plugin-react-helmet": "^3.0.4",
