--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "main": "index.js",
   "dependencies": {
     "@babel/core": "^7.2.2",
+    "@emotion/core": "^10.0.5",
+    "@emotion/styled": "^10.0.5",
     "classnames": "^2.2.6",
-    "emotion": "^10.0.5",
     "font-awesome": "^4.7.0",
     "gatsby": "^2.0.85",
+    "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-offline": "^2.0.20",
